--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 export(SpectralTAD)
 export(SpectralTAD_Par)
+import(BiocParallel)
 import(dplyr)
 importFrom(BiocParallel,MulticoreParam)
 importFrom(BiocParallel,SnowParam)
 importFrom(BiocParallel,bplapply)
 importFrom(BiocParallel,register)
+importFrom(magrittr,"%>%")
