--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: SpectralTAD
-Title: What the Package Does (One Line, Title Case)
+Title: SpectralTAD: Hierarchical TAD detection using spectral clustering
 Version: 0.0.0.9000
-Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com")
-Description: What the package does (one paragraph).
+Authors@R: c(person("Kellen", "Cresswell", email = "cresswellkg@vcu.edu", role = c("aut", "cre")), 
+person("Mikhail", "Dozmorov", email = "mikhail.dozmorov@vcuhealth.org", role = c("aut")))
+Description: SpectralTAD is an R package designed to identify Topologically Associating Domains 
+from contact matrices. It uses a modified version of spectral clustering that uses a window to 
+quickly detect TADs. The function works on a range of different types of contact matrices and
+returns a bed file of TAD coordinates. The method does not require users to adjust any parameters
+to work and gives them control over the number of hierarchical levels to be returned.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
