--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,16 @@
 Package: SpectralTAD
 Title: SpectralTAD: Hierarchical TAD detection using spectral clustering
 Version: 0.0.0.9000
-Authors@R: c(person("Kellen", "Cresswell", email = "cresswellkg@vcu.edu", role = c("aut", "cre")), 
-person("Mikhail", "Dozmorov", email = "mikhail.dozmorov@vcuhealth.org", role = c("aut")))
-Description: SpectralTAD is an R package designed to identify Topologically Associating Domains 
-from contact matrices. It uses a modified version of spectral clustering that uses a window to 
-quickly detect TADs. The function works on a range of different types of contact matrices and
-returns a bed file of TAD coordinates. The method does not require users to adjust any parameters
-to work and gives them control over the number of hierarchical levels to be returned.
+Author:
+    Kellen Cresswell <cresswellkg@vcu.edu>, 
+    Mikhail Dozmorov <mikhail.dozmorov@vcuhealth.org>
+Description: SpectralTAD is an R package designed to identify Topologically 
+Associating Domains (TADs) from Hi-C contact matrices. It uses a modified 
+version of spectral clustering that uses a sliding window to quickly detect 
+TADs. The function works on a range of different formats of contact matrices 
+and returns a bed file of TAD coordinates. The method does not require users 
+to adjust any parameters to work and gives them control over the number of 
+hierarchical levels to be returned.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
