--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,9 @@ Imports:
     magrittr,
     HiCcompare
 Suggests: 
+    BiocCheck,
+    BiocManager,
+    BiocStyle,
     knitr,
     rmarkdown
 VignetteBuilder: knitr
