--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,5 +32,6 @@ Suggests:
     BiocStyle,
     knitr,
     rmarkdown,
-    microbenchmark
+    microbenchmark,
+    testthat
 VignetteBuilder: knitr
