--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(SpectralTAD)
 export(SpectralTAD_Par)
 import(dplyr)
+import(magrittr)
 importFrom(BiocParallel,MulticoreParam)
 importFrom(BiocParallel,SnowParam)
 importFrom(BiocParallel,bplapply)
