--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,4 +36,4 @@ Suggests:
     microbenchmark,
     testthat
 VignetteBuilder: knitr
-biocViews: Software, HiC, Sequencing, FeatureExtraction
+biocViews: Software, HiC, Sequencing, FeatureExtraction, Clustering
