add GR to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(SpectralTAD)
 export(SpectralTAD_Par)
 import(dplyr)
 import(magrittr)
+import(GenomicRanges)
 importFrom(BiocParallel,MulticoreParam)
 importFrom(BiocParallel,SnowParam)
 importFrom(BiocParallel,bplapply)
