add start to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,4 @@ importFrom(BiocParallel,bplapply)
 importFrom(BiocParallel,register)
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,GRangesList)
+importFrom(GenomicRanges,start)
