--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
+r_packages:
+  - covr
+  
+after_success:
+  - Rscript -e 'library(covr); codecov()'
 
 language: R
 cache: packages
