--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,4 @@ importFrom(BiocParallel,register)
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,GRangesList)
 importFrom(GenomicRanges,start)
+importFrom(utils,write.table)
